added get all jobs data
