# server/restAPI/routes/jobs.go
@@ -5,6 +5,8 @@ import (
 
 	"github.com/Dpbm/quantumRestAPI/types"
 	"github.com/Dpbm/quantumRestAPI/utils"
+	"github.com/Dpbm/shared/format"
+	"github.com/Dpbm/shared/log"
 	logger "github.com/Dpbm/shared/log"
 	"github.com/gin-gonic/gin"
 )
@@ -17,17 +19,17 @@ import (
 // @Tags jobs
 // @Param id path string true "Job ID"
 // @Produce json
-// @Success 200 {object} types.JobData
+// @Success 200 {object} types.JobResultData
 // @Failure 400 {object} map[string]string "Invalid ID parameter"
 // @Failure 500 {object} map[string]string "Failed during DB connection"
 // @Failure 404 {object} map[string]string "No results for this ID"
-// @Router /job/{id} [get]
+// @Router /job/result/{id} [get]
 func GetJob(context *gin.Context) {
 	var job types.GetJobById
 	err := context.ShouldBindUri(&job)
 	if err != nil {
 		logger.LogError(err)
-		context.JSON(400, map[string]string{"msg": err.Error()})
+		context.JSON(400, map[string]string{"msg": "Invalid Parameter"})
 		return
 	}
 
@@ -66,7 +68,7 @@ func DeleteJob(context *gin.Context) {
 	err := context.ShouldBindUri(&job)
 	if err != nil {
 		logger.LogError(err)
-		context.JSON(400, map[string]string{"msg": err.Error()})
+		context.JSON(400, map[string]string{"msg": "Invalid Parameter"})
 		return
 	}
 
@@ -85,6 +87,43 @@ func DeleteJob(context *gin.Context) {
 	}
 
 	context.JSON(200, map[string]string{"msg": "Sucess"})
+}
+
+// @BasePath /api/v1
+// @version 1.0
+// @Summary get jobs data
+// @Schemes http
+// @Description get all data from jobs
+// @Tags jobs
+// @Param cursor query int false "Last id gotten from db"
+// @Produce json
+// @Success 200 {object} []types.JobData
+// @Failure 500 {object} map[string]string "Failed during DB connection"
+// @Router /jobs [get]
+func GetJobs(context *gin.Context) {
+	cursor := context.Query("cursor")
+	cursorValue, err := format.StrToUint(cursor)
+
+	if err != nil {
+		log.LogError(err)
+		cursorValue = 0
+	}
+
+	db, ok := utils.GetDBFromContext(context)
+	if !ok || db == nil {
+		logger.LogError(errors.New("failed on get DB from context"))
+		context.JSON(500, map[string]string{"msg": "Failed on Stablish database connection!"})
+		return
+	}
+
+	result, err := db.GetJobsData(cursorValue)
+	if err != nil {
+		logger.LogError(err)
+		context.JSON(200, map[any]any{})
+		return
+	}
+
+	context.JSON(200, result)
 }
 
 // TODO: ADD CANCEL JOB (PUT)
